[package]
name = "tile_world_rust"
version = "0.1.0"
authors = ["Jos Dehaes <jos.dehaes@gmail.com>"]
edition = "2021"

[[bin]]
name = "tile_world_rust"
path = "src/main.rs"

[dependencies]
env_logger = "0.9"
log = "0.4"
getrandom = "0.2"
rand = "0.8"
glib = "0.16"
priority-queue = "1.2"
cairo-rs = { version = "0.16" }

[dependencies.gtk]
version = "0.16"
features = ["v3_24"]

[dependencies.gio]
version = "0.16"
