[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
rand = "0.8"
log = "0.4"
priority-queue = "1.2"
piston = "0.53.1"
rusttype = "0.9.2"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"
paste = "1.0"

